# trusted-firmware-m

./: CMakeLists.txt  pyproject.toml  readme.rst  toolchain_ARMCLANG.cmake  toolchain_ATFE.cmake  toolchain_GNUARM.cmake  trusted-firmware-m.code-workspace
.scripts/: build_mps2_an521_blx_bl2_spe_app.sh  build_mps2_an521_spe_app.sh  build_spe_app.sh  setup_arm_gnu_toolchain.sh  setup_python.sh
bl1/bl1_1/: CMakeLists.txt
bl1/bl1_1/shared_lib/: CMakeLists.txt
bl1/bl1_2/: CMakeLists.txt
bl2/: CMakeLists.txt
bl2/ext/mcuboot/: CMakeLists.txt  keys_hw.c
bl2/ext/mcuboot/scripts/: wrapper.py
bl2/src/: shared_data.c
cmake/: install.cmake
config/: check_config.cmake  config_base.cmake
docs/: conf.py
docs/design_docs/: index.rst  mm_iovec.rst
docs/getting_started/: tfm_getting_started.rst
docs/integration_guide/: index.rst  tfm_fpu_support.rst
docs/platform/arm/corstone1000/: readme.rst
docs/platform/nxp/: index.rst
docs/platform/stm/: index.rst
interface/: CMakeLists.txt
interface/include/: tfm_crypto_defs.h
interface/include/multi_core/: tfm_mailbox.h  tfm_ns_mailbox.h
interface/include/os_wrapper/: kernel.h
interface/include/psa/: crypto.h  crypto_builtin_key_derivation.h  crypto_compat.h  crypto_driver_contexts_composites.h  crypto_driver_contexts_key_derivation.h  crypto_driver_contexts_primitives.h  crypto_extra.h  crypto_struct.h  crypto_values.h
interface/include/tf-psa-crypto/: build_info.h
interface/src/multi_core/: tfm_multi_core_psa_ns_api.c  tfm_ns_mailbox.c  tfm_ns_mailbox_common.c  tfm_ns_mailbox_thread.c
interface/src/os_wrapper/: tfm_ns_interface_rtos.c
lib/efi_guid/: CMakeLists.txt
lib/efi_guid/inc/: efi_guid.h  efi_guid_structs.h
lib/efi_guid/src/: efi_guid.c
lib/ext/: CMakeLists.txt
lib/ext/cmsis/: CMakeLists.txt
lib/ext/dtpm/: CMakeLists.txt
lib/ext/efi_soft_crc/: CMakeLists.txt
lib/ext/efi_soft_crc/inc/: efi_soft_crc.h
lib/ext/efi_soft_crc/src/: efi_soft_crc.c
lib/ext/ethos_u_core_driver/: CMakeLists.txt
lib/ext/eventlog/: CMakeLists.txt
lib/ext/mcuboot/: 0001-bootutil-Parse-key-ID-for-built-in-keys.patch
lib/ext/psa-adac/: CMakeLists.txt
lib/ext/qcbor/: CMakeLists.txt
lib/ext/t_cose/: CMakeLists.txt
lib/ext/tf-m-extras/: CMakeLists.txt
lib/ext/tf-m-tests/: version.txt
lib/ext/tf-psa-crypto/: 0001-Add-generated-files-to-the-source-tree.patch  0002-Add-TF-M-Builtin-Key-Loader-driver-entry-points.patch  0003-Enable-crypto-code-sharing-between-independent-binar.patch  0004-Allow-SE-key-to-use-key-vendor-id-within-PSA-crypto.patch  0004-Initialise-driver-wrappers-as-first-step-in-psa_cryp.patch  0005-Hardcode-CC3XX-entry-points.patch  0005-Initialise-driver-wrappers-as-first-step-in-psa_cryp.patch  0006-Hardcode-CC3XX-entry-points.patch  0006-P256M-Add-option-to-force-not-use-of-asm.patch  0007-P256M-Add-option-to-force-not-use-of-asm.patch  0007-psa-mac-only-call-memset-if-key_length-is-less-than-.patch  0008-Add-CC3XX-Opaque-Key-entry-points.patch  0008-psa-mac-only-call-memset-if-key_length-is-less-than-.patch  0009-Add-CC3XX-Opaque-Key-entry-points.patch  0009-Define-base-attributes-and-structure-for-SP800-108-C.patch  0010-Add-experimental-LMS-support-as-a-vendor-extension.patch  0010-Define-base-attributes-and-structure-for-SP800-108-C.patch  0011-Add-experimental-LMS-support-as-a-vendor-extension.patch  0011-Exclude-built-in-definitions-for-PSA-Crypto-client.patch  0012-Exclude-context-definitions-for-PSA-Crypto-client.patch  0012-Re-add-psa_can_do_cipher-to-public-interface.patch  0013-Implement-SP800-108-Counter-CMAC-key-derivation-in-P.patch  0013-Re-add-psa_can_do_cipher-to-public-interface.patch  0014-Implement-SP800-108-Counter-CMAC-key-derivation-in-P.patch  0014-Support-use-of-cc3xx-opaque-keys-in-PSA-Crypto-core.patch  0015-Re-add-support-for-AES-Keywrap-for-TF-M.patch  0015-Support-use-of-cc3xx-opaque-keys-in-PSA-Crypto-core.patch  0016-Do-not-define-__STDC_WANT_LIB_EXT1__-with-ATfE.patch  0016-psa-parenthesize-truncation-test-in-PSA_MAC_LENGTH.patch  CMakeLists.txt
lib/ext/tf-psa-crypto/tfpsacrypto_config/: crypto_config_default.h  crypto_config_profile_large.h  crypto_config_profile_medium.h  crypto_config_profile_small.h
lib/ext/thin-psa-crypto-core/: thin_psa_crypto_core.c
lib/fih/: CMakeLists.txt
lib/fih/inc/: fih.h
lib/gpt/: CMakeLists.txt
lib/gpt/inc/: gpt.h  gpt_flash.h
lib/gpt/src/: gpt.c
lib/gpt/unittests/: CMakeLists.txt
platform/: CMakeLists.txt
platform/ext/common/: provisioning.c
platform/ns/: toolchain_ns_ARMCLANG.cmake  toolchain_ns_ATFE.cmake  toolchain_ns_GNUARM.cmake
secure_fw/: CMakeLists.txt
secure_fw/partitions/crypto/: CMakeLists.txt  crypto_key_management.c  crypto_library.c
secure_fw/partitions/initial_attestation/: CMakeLists.txt  attest_boot_data.c  attest_symmetric_key.c
secure_fw/partitions/ns_agent_mailbox/: tfm_spe_mailbox.c
secure_fw/partitions/ns_agent_tz/: psa_api_veneers_v80m.c
secure_fw/partitions/protected_storage/: ps_encrypted_object.c  ps_object_table.c  tfm_protected_storage.c
secure_fw/spm/: CMakeLists.txt
secure_fw/spm/core/: backend_ipc.c  interrupt.c  interrupt.h  psa_api.c  psa_interface_svc.c  tfm_svcalls.c
tools/modules/: c_struct.py
(+24 files in other folders)
